force-app/main/default/objects/IVR_Application_Status_Snapshot__c/IVR_Application_Status_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Caller-safe PVL application status snapshot for IVR playback decisions.</description>
    <label>IVR Application Status Snapshot</label>
    <nameField>
        <displayFormat>IVR-{000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IVR Application Status Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>