force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Application represented by this IVR status snapshot.</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>IVR Application Status Snapshots</relationshipLabel>
    <relationshipName>IVR_Application_Status_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>