force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/Application_Key__c.field-meta.xml
<CustomField>
    <fullName>Application_Key__c</fullName>
    <description>Stable source Application Id key used to upsert one current IVR snapshot row per application.</description>
    <externalId>true</externalId>
    <label>Application Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>