force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/Freshness_State__c.field-meta.xml
<CustomField>
    <fullName>Freshness_State__c</fullName>
    <description>Freshness state evaluated by the PVL Application Status snapshot refresh process.</description>
    <label>Freshness State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fresh_enough</fullName>
                <default>true</default>
                <label>fresh_enough</label>
            </value>
            <value>
                <fullName>stored_only</fullName>
            </value>
            <value>
                <fullName>batch_window</fullName>
            </value>
            <value>
                <fullName>dependency_stale_risk</fullName>
            </value>
            <value>
                <fullName>cleanup_risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>