force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/IVR_Response_Policy__c.field-meta.xml
<CustomField>
    <fullName>IVR_Response_Policy__c</fullName>
    <description>Controls whether Salesforce allows exact IVR playback, limited playback, transfer, or temporary unavailable handling.</description>
    <label>IVR Response Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>deliver_status</fullName>
                <default>true</default>
                <label>deliver_status</label>
            </value>
            <value>
                <fullName>deliver_limited_status</fullName>
            </value>
            <value>
                <fullName>offer_transfer</fullName>
            </value>
            <value>
                <fullName>temporarily_unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>