force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/IVR_Status__c.field-meta.xml
<CustomField>
    <fullName>IVR_Status__c</fullName>
    <description>Caller-safe normalized application status evaluated for IVR use.</description>
    <label>IVR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>