force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/IVR_Status_Confidence__c.field-meta.xml
<CustomField>
    <fullName>IVR_Status_Confidence__c</fullName>
    <description>Optional numeric confidence score from the snapshot generation process.</description>
    <label>IVR Status Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>