force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/IVR_Status_Message_Key__c.field-meta.xml
<CustomField>
    <fullName>IVR_Status_Message_Key__c</fullName>
    <description>Approved message catalog key for this snapshot.</description>
    <label>IVR Status Message Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>