force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/IVR_Status_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>IVR_Status_Verified_At__c</fullName>
    <description>When the IVR status snapshot was last verified for caller playback.</description>
    <label>IVR Status Verified At</label>
    <type>DateTime</type>
</CustomField>