force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/Last_Relevant_Job_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Relevant_Job_Completed_At__c</fullName>
    <description>Latest upstream job completion time considered by the snapshot process.</description>
    <label>Last Relevant Job Completed At</label>
    <type>DateTime</type>
</CustomField>