force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/Reason_Codes__c.field-meta.xml
<CustomField>
    <fullName>Reason_Codes__c</fullName>
    <description>Non-sensitive reason codes emitted by the snapshot process.</description>
    <label>Reason Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>