force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/Source_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_Status__c</fullName>
    <description>Raw Application status captured when the IVR snapshot was verified.</description>
    <label>Source Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>