force-app/main/default/objects/IVR_Application_Status_Snapshot__c/fields/Source_Status_SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>Source_Status_SystemModstamp__c</fullName>
    <description>System timestamp of the source status used by the snapshot process.</description>
    <label>Source Status System Modstamp</label>
    <type>DateTime</type>
</CustomField>